# sholl-analysis-python

./: CLAUDE.md  README.md  cleaning.md  main.py  main.spec  output.csv  plans.md  process_output.py
archived_NOT_working/: WORKING.py  main.py  main_2 copy 2.py  main_2 copy.py  main_2_streamlining_WORKING.py  main_with_smoothing_CORRECT.py  sholl_analysis_200916.ipynb  sholl_analysis_master-Copy1.ipynb  sholl_analysis_master.ipynb
coordinates/: Center
jupyter_nbs/: calculate_intersections_fxn.ipynb  processing_output.ipynb  processing_raw_output.ipynb  saving_intersections.ipynb
sholl_analysis/: README.md  pyproject.toml
sholl_analysis/sholl_analysis/: __init__.py  analyzer.py  cli.py  geometry.py  image_processing.py  io.py  supported_formats.py  test_images.py  visualization.py
sholl_analysis/sholl_analysis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sholl_analysis/tests/: test_geometry.py
sholl_analysis_v6/sholl_analysis/sholl_analysis/: __init__.py  analyzer.py  cli.py  geometry.py  image_processing.py  visualization.py
sholl_analysis_v6/sholl_analysis/tests/: test_geometry.py
